--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: LY
-author: @Jenuaz
+author: Jenuaz
 email: lysiak.yevhenii@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   This is LY blog page. Purpose of this blog is self-development and SMART management.
